infra/module/security-group/main.tf
/* Security group */

resource "aws_security_group" "security_group" {
  name   = var.security_group
  vpc_id = var.vpc_id

  egress = {
    from_port  = 0
    to_port    = 0
    protocol   = "tcp"
    cidr_block = ["0.0.0.0/0"]
  }

  ingress = [
    {
      from_port  = "80"
      to_port    = "80"
      protocol   = "tcp"
      cidr_block = ["0.0.0.0/0"]
    },
    {
      from_port   = "443"
      to_port     = "443"
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  ]
}
